docs(dotfiles): refresh remaining language agent skills